# unsized-stack

./: Cargo.toml  readme.md
src/: fat_ptr.rs  iter.rs  lib.rs  raw.rs
tests/: alignment_test.rs  sample_test.rs  variant_test.rs
