[package]
name = "unsized-stack"
description = "Fast heterogeneous / unsized stack"
version = "0.1.2"
edition = "2021"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT"
categories = ["data-structures"]
repository = "https://github.com/storycraft/unsized-stack/"

[dependencies]
sptr = "0.3.2"
